--- a/MyBookStore/Views/Home/Index.cshtml
+++ b/MyBookStore/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Hello. Click book to see all books. If you want to reserve a book, need to login first.</p>
 </div>
