--- a/MyBookStore/Views/Home/Index.cshtml
+++ b/MyBookStore/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello. Click book to see all books. If you want to reserve a book, need to login first.</p>
+    <p>Hello. Click <a asp-area="" asp-controller="Home" asp-action="BookStore">Book</a> to see all books. If you want to reserve a book, need to login first.</p>
 </div>
