--- a/MyBookStore/Views/Home/Login.cshtml
+++ b/MyBookStore/Views/Home/Login.cshtml
@@ -3,4 +3,60 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to login</p>
+<div class="container">
+    <form class="box-body" action="/Home/Login" method="post">
+        <div class="form-group row">
+            <label class="col-sm-1 col-md-1">User Id:</label>
+            <div class="col-sm-5 col-md-5">
+                <input type="text" class="form-control" id="account" name="account" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-1 col-md-1">Password:</label>
+            <div class="col-sm-5 col-md-5">
+                <input type="password" class="form-control" id="password" name="password" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-1 col-md-1"></div>
+            <div class="col-sm-5 col-md-5">
+                <button type="button" class="btn btn-info" onclick="Login();">Login</button>
+                <button type="reset" class="btn btn-info">Reset</button>
+            </div>
+        </div>
+    </form>
+    
+</div>
+
+<script src="~/js/jquery.js"></script>
+<script src="~/js/common.js"></script>
+
+<script >
+function Login() {
+  let params = {
+      userId: $("#account").val(),
+      password: $("#password").val()
+    };
+     
+  // store the token into localstorage
+  $.ajax({
+      type: "POST",
+      url: "/api/v1/User/login",
+      // The key needs to match your method's input parameter (case-sensitive).
+      data: JSON.stringify(params),
+      contentType: "application/json; charset=utf-8",
+      dataType: "json",
+      success: function(data){
+          let tokenStr = data.token
+          // safe cookie that prevents XSS and CSRF
+          console.log("token: " + tokenStr)
+          UTIL.setCookie("jwt", tokenStr, 30);
+          alert("Login successful, please go to reserve book");
+          },
+      error: function(errMsg) {
+          alert(errMsg);
+      }
+  });
+}
+  
+</script>
