--- a/MyBookStore/Views/Home/Register.cshtml
+++ b/MyBookStore/Views/Home/Register.cshtml
@@ -1,6 +1,64 @@
 @{
     ViewData["Title"] = "User register";
 }
-<h1>@ViewData["Title"]</h1>
+<div class="container">
+    <form class="box-body" action="/Home/Login" method="post">
+        <div class="form-group row">
+            <label class="col-sm-1 col-md-1">User Id:</label>
+            <div class="col-sm-5 col-md-5">
+                <input type="text" class="form-control" id="account" name="account" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-1 col-md-1">Password:</label>
+            <div class="col-sm-5 col-md-5">
+                <input type="password" class="form-control" id="password" name="password" />
+            </div>
+        </div>
+        <div class="form-group row">
+                    <label class="col-sm-1 col-md-1">Name:</label>
+                    <div class="col-sm-5 col-md-5">
+                        <input type="text" class="form-control" id="name" name="name" />
+                    </div>
+                </div>
+        <div class="form-group row">
+            <div class="col-sm-1 col-md-1"></div>
+            <div class="col-sm-5 col-md-5">
+                <button type="button" class="btn btn-info" onclick="Register();">Register</button>
+                <button type="reset" class="btn btn-info">Reset</button>
+            </div>
+        </div>
+    </form>
+    
+</div>
 
-<p>Use this page to register new user</p>
+<script src="~/js/jquery.js"></script>
+<script src="~/js/common.js"></script>
+
+<script >
+function Register() {
+  let params = {
+      userId: $("#account").val(),
+      password: $("#password").val(),
+      name: $("#name").val()
+    };
+     
+  // store the token into localstorage
+  $.ajax({
+      type: "POST",
+      url: "/api/v1/User/register",
+      // The key needs to match your method's input parameter (case-sensitive).
+      data: JSON.stringify(params),
+      contentType: "application/json; charset=utf-8",
+      success: function(){
+          // safe cookie that prevents XSS and CSRF
+          alert("Register successful, please go to login page to get permission for system!");
+          console.log("register successful");
+          },
+      error: function(errMsg) {
+          alert(errMsg);
+      }
+  });
+}
+  
+</script>
