--- a/MyBookStore/Views/Home/Index.cshtml
+++ b/MyBookStore/Views/Home/Index.cshtml
@@ -7,4 +7,11 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Hello. Click <a asp-area="" asp-controller="Home" asp-action="BookStore">Book</a> to see all books. If you want to reserve a book, need to login first.</p>
+    <br>
+    <p>System supports RESTful api access, get postman test schema from `/doc/MyBookStore.postman_collection.json` of the project root.</p>
+    <br>
+    <p>Database migration: find mysqldump file in `/MyBookStore.DAL/Migration` </p>
+    <br>
+    <p>More information: <a href="https://github.com/Blackmesa-Canteen/Dot-NET-my-book-store">GitHub Repo Link</a></p>
+
 </div>
