--- a/MyBookStore/Views/Home/Register.cshtml
+++ b/MyBookStore/Views/Home/Register.cshtml
@@ -56,7 +56,7 @@ function Register() {
           console.log("register successful");
           },
       error: function(errMsg) {
-          alert(errMsg);
+          alert("Register error, see backend and frontend console");
       }
   });
 }
