--- a/MyBookStore/Views/Home/Login.cshtml
+++ b/MyBookStore/Views/Home/Login.cshtml
@@ -54,7 +54,7 @@ function Login() {
           alert("Login successful, please go to reserve book");
           },
       error: function(errMsg) {
-          alert("Register error, see backend and frontend console");
+          alert("Login error, check id/password, or see backend and frontend console");
       }
   });
 }
